# IAmSurging

./: .dockerignore  .gitignore  API.md  Cargo.toml  Dockerfile  README.md  discover-feeds.js
scripts/: discover-feeds.js  run-tests.sh  setup.sh
src/: client.rs  error.rs  feed_loader.rs  lib.rs  main.rs  streaming.rs  types.rs
src/server/: app.rs  auth.rs  metrics.rs  mod.rs  routes.rs  websocket.rs
tests/: integration_tests.rs  server_tests.rs
