[package]
name = "i-am-surging"
version = "0.1.0"
edition = "2021"
description = "Rust client for Switchboard Surge price feeds"
license = "MIT"

[lib]
name = "i_am_surging"
path = "src/lib.rs"

[[bin]]
name = "surge"
path = "src/main.rs"

[[bin]]
name = "surge-server"
path = "src/bin/surge-server.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }
url = "2.5"

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tower = { version = "0.4", features = ["timeout", "limit"] }
tower-http = { version = "0.5", features = ["cors", "trace", "timeout"] }
http = "1.0"

# Logging & metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Utilities
once_cell = "1.19"

[dev-dependencies]
axum-test = "15"
tower = { version = "0.4", features = ["util"] }
hyper = { version = "1.0", features = ["full"] }
